background colour is too light, fixing

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -4,7 +4,7 @@
 @light-gray: #95a7cc;
 @gray: #969696;
 @dark-gray: #686868;
-@very-dark-gray: #3D3D3D;
+@very-dark-gray: #1b1b1b;
 
 @cyan: #8292b2;
 @blue: #596196;
